discussion/kv_engine/132842/132842_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch mad-hatter into master

* commit 'e31f2734':
  MB-40370: Make cb::xattr::get_body_size resilient to compressed payloads

Change-Id: I2beffb98a2ec0cf64fa26f83315ee34465838f5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-07-20 10:30:38.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-20 10:35:15.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25255/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25255/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29228/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29228/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12628/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12628/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3839/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4730/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4807/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4917/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4917/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3431/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2749:15: error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
        const boost::optional<cb::durability::Requirements>& durReqs,
              ^~~~~~~~~~~~~~~
              std::optional
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/optional:453:11: note: "std::optional" declared here
    class optional
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2816:36: error: no member named "is_initialized" in "std::optional<cb::durability::Requirements>" [clang-diagnostic-error]
    const auto isPrepare = durReqs.is_initialized();
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3431/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2749:15:
error: no template named "optional" in namespace "boost"; did you mean "std::optional"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3431/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1938/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
